# PL-Hourly-Heuristic

./: .gitignore  Pipfile  README.md  analysis.ipynb  managerial_insight.ipynb  performance.ipynb  pyproject.toml  requirements.txt  tuning.ipynb
analysis/: __main__.py  analysis.ipynb  heuristic_performance.ipynb  policies.ipynb  single_experiment.ipynb
analysis/cache/: README.md
analysis/caching/: __init__.py  get_cached_results.py  has_cached_results.py  store_results.py
analysis/measures/: __init__.py  classroom_utilisation.py  compute_measures.py  instance.py  instruction_activity_sizes.py  instruction_size.py  num_activities.py  num_classrooms_used.py  num_instruction.py  num_self_study.py  num_teachers_used.py  objective.py  percentage_instruction.py  percentage_self_study.py  self_study_size.py  teacher_utilisation.py
cache/: README.md
experiments/: README.md
heuristic/: Configuration.py  Data.py  State.py  Weights.py  __main__.py  adaptive_large_neighbourhood_search.py  anneal.py  constants.py  diagnostics.py  evaluate.py  initial_solution.py  large_neighbourhood_search.py
ilp/: __init__.py  __main__.py  ilp.py  post_process.py  setup_decision_variables.py  setup_objective.py  setup_solver_data.py  write_results.py
notebooks/: managerial_insight.ipynb  performance.ipynb  tuning.ipynb
src/: analyse.py  constants.py  heuristic.py  ilp.py  make_experiments.py  tune.py  validator.py
utils/: Data.py  MethodType.py  Result.py  State.py  __init__.py  file_location.py  instances.py  max_capacity.py  write_result.py
validator/: __main__.py  validate.py
(+198 files in other folders)
