[tool.poetry]
name = "pl-heuristic"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.2"
gurobipy = "^9.5.1"
scipy = "^1.8.1"
pyDOE2 = "^1.3.0"
iteround = "^1.0.4"
matplotlib = "^3.5.2"
alns = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
